# krunch

./: .gitignore  .impeccable.md  Cargo.toml  LICENSE  PLAN-REVIEW-LOG.md  PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
crates/krunch-core/: Cargo.toml
crates/krunch-core/src/: config.rs  consensus.rs  ids.rs  lib.rs  parse.rs  schema.rs  state.rs
crates/krunch-engine/: Cargo.toml
crates/krunch-engine/src/: lib.rs  prompts.rs
crates/krunch-engine/tests/: deliberation.rs
crates/krunch-providers/: Cargo.toml
crates/krunch-providers/src/: agent.rs  anthropic.rs  backoff.rs  cli.rs  demo.rs  error.rs  http.rs  lib.rs  openai.rs  sse.rs  types.rs
crates/krunch-providers/tests/: streaming.rs
crates/krunch-store/: Cargo.toml
crates/krunch-store/src/: lib.rs  schema.rs
crates/krunch-store/tests/: store.rs
docs/superpowers/plans/: 2026-07-17-seat-personalities-build-log.md  2026-07-17-seat-personalities.md  2026-07-20-persisted-settings-and-history.md  2026-07-20-setup-screen-redesign.md  2026-07-21-signal-cyberpunk-rebrand.md
docs/superpowers/specs/: 2026-07-17-seat-personalities-design.md  2026-07-19-session-stop-and-new-design.md  2026-07-20-persisted-settings-and-history-design.md  2026-07-20-setup-screen-redesign-design.md  2026-07-21-signal-cyberpunk-rebrand-design.md
src/: App.vue  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  credentials.rs  export.rs  gate.rs  lib.rs  main.rs  provider_factory.rs
src/assets/fonts/: fonts.css
src/components/: AwaitingUserModal.vue  CockpitStatusBar.vue  CommandPalette.vue  ConvenePanel.vue  ConvergenceStrip.vue  EventLogRail.vue  HistoryDialog.vue  MediatorPanel.vue  OscilloscopeSync.vue  PresetControls.vue  SeatCard.vue  SeatEditor.vue  SeatRoster.vue  SeatRosterItem.vue  StreamMarkdown.vue
src/components/ui/input/: Input.vue
src/lib/: api.ts  markdown.ts  personas.ts  pretext.ts  preview-seed.ts  seat-identity.ts  shortcuts.ts  stick-to-bottom.ts  telemetry.ts  types.ts  typewriter.ts  utils.ts
src/screens/: RoomScreen.vue  SetupScreen.vue  VerdictScreen.vue
src/stores/: deliberation.ts  settings.ts
