[package]
name = "krunch"
description = "krunch — a jury-room deliberation engine for a panel of LLMs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# The library that Tauri's mobile bindings expect; also lets us unit-test app logic.
[lib]
name = "krunch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
krunch-core = { path = "../crates/krunch-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio.workspace = true
