[package]
name = "krunch-core"
description = "Pure domain logic for krunch: state machine, schemas, consensus guard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
