[package]
name = "krunch-engine"
description = "The deliberation orchestrator: concurrent rounds, retries, consensus, finalization"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
krunch-core = { path = "../krunch-core" }
krunch-providers = { path = "../krunch-providers" }
krunch-store = { path = "../krunch-store" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"
